--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -16,6 +16,8 @@ library(powerjoin)
 library(glue)
 library(vip)
 library(baguette)
+library(dplyr)
+library(glmnet)
 ```
 
 Now I have to download the CAMELS dataset and documentation PDF
@@ -390,50 +392,265 @@ rank_results(wf, rank_metric = "rsq", select_best = TRUE)
 ## Question 3
 
 ```{r}
-#Define the new model 
+library(tidymodels)  
+library(glmnet)
 
-xgb_spec <- boost_tree(
-  trees        = 1000,         
-  tree_depth   = tune(),       
-  learn_rate   = tune(),      
-  loss_reduction = tune()     
-) %>%
-  set_engine("xgboost") %>%
-  set_mode("regression")
-
-#Bagged MLP  via baguette
-nn_spec <- bag_mlp(
-  mode = "regression"
-) %>%
-  set_engine("nnet")
-
-#Re‐create the workflow set with all four models
-models_list <- list(
-  linear = lm_model,    
-  rf     = rf_model,
-  xgb    = xgb_spec,
-  mlp    = nn_spec
-)
-
-wf_all <- workflow_set(
-  preproc = list(rec = rec), 
-  models  = models_list
-)
-
-#Fit all workflows via resampling 
+#1 Data split & 10‑fold CV
 set.seed(123)
-wf_res <- wf_all %>%
+camels_split <- initial_split(camels, prop = 0.75, strata = logQmean)
+camels_train <- training(camels_split)
+camels_test  <- testing(camels_split)
+camels_cv    <- vfold_cv(camels_train, v = 10, strata = logQmean)
+
+#2 Recipe
+rec_flow <- recipe(
+  logQmean ~ p_mean + aridity + pet_mean + slope_mean + frac_forest,
+  data = camels_train
+) %>%
+  step_impute_median(all_numeric_predictors()) %>%  
+  step_zv(all_numeric_predictors())                 
+
+#3 The four models
+rf_mod  <- rand_forest(
+             trees = 300,           
+             mtry  = tune()         
+           ) %>% set_engine("ranger") %>% set_mode("regression")
+
+xgb_mod <- boost_tree(
+             trees       = 300,     
+             learn_rate  = tune(),  
+             tree_depth  = tune()
+           ) %>% set_engine("xgboost") %>% set_mode("regression")
+
+glm_mod <- linear_reg(               
+             penalty = 0.01,
+             mixture = 0.5
+           ) %>% set_engine("glmnet")
+
+cart_mod <- decision_tree(           
+              cost_complexity = tune(),
+              tree_depth      = tune()
+            ) %>% set_engine("rpart") %>% set_mode("regression")
+
+models <- list(
+  rf   = rf_mod,
+  xgb  = xgb_mod,
+  glm  = glm_mod,
+  cart = cart_mod
+)
+
+#4 Workflow set and quick grid search
+wf_set <- workflow_set(
+  preproc = list(flow = rec_flow),
+  models  = models
+)
+
+set.seed(456)
+wf_res <- wf_set %>%
   workflow_map(
-    fn       = "tune_grid",          
-    grid     = 5,                    
+    fn        = "tune_grid",
     resamples = camels_cv,
-    metrics  = metric_set(rsq, rmse),
-    control  = control_grid(save_pred = TRUE)
+    grid      = 3,                           
+    metrics   = metric_set(rsq, rmse),
+    control   = control_grid(verbose = TRUE,
+                             save_pred = FALSE)  
   )
 
-autoplot(wf_res)
-rank_results(wf_res, rank_metric = "rsq", select_best = FALSE)
+#5 Inspect results
+autoplot(wf_res)                        
+rank_results(wf_res,                   
+             rank_metric = "rsq",
+             select_best = TRUE)
+```
+
+rand_forest is the best model to move forward with, because it has the best RMSE of 0.46, and the best R^2 value of 0.9. It also has the error bars, which means it it more stable across the 10 folds. 
+
+```{r}
+library(tidymodels)     
+library(glmnet)         
+theme_set(theme_bw())   
+
+set.seed(20250516)
+
+#1 Train/test split 75/25
+camels_split <- initial_split(camels, prop = 0.75, strata = logQmean)
+camels_train <- training(camels_split)
+camels_test  <- testing(camels_split)
+
+#2 10‑fold cross‑validation on training set
+camels_cv <- vfold_cv(camels_train, v = 10, strata = logQmean)
+
+rec_flow <- recipe(
+  logQmean ~ p_mean + pet_mean + aridity +
+             slope_mean + elev_mean +
+             frac_snow + frac_forest,
+  data = camels_train
+) %>%
+  step_impute_median(all_numeric_predictors()) %>%   
+  step_zv(all_numeric_predictors()) %>%             
+  step_YeoJohnson(all_numeric_predictors()) %>%     
+  step_normalize(all_numeric_predictors())          
+
+#4 Model 
+rf_spec <- rand_forest(mtry = tune(), trees = 400, min_n = tune()) %>%
+             set_engine("ranger", importance = "impurity") %>%
+             set_mode("regression")
+
+rf_wf <- workflow() %>%
+           add_recipe(rec_flow) %>%
+           add_model(rf_spec)
+
+#5 Hyper‑parameter search 
+set.seed(20250516)
+rf_grid <- grid_regular(
+  mtry(range = c(3L, 7L)),
+  min_n(range = c(2L, 10L)),
+  levels = 3            
+)
+
+rf_res <- tune_grid(
+  rf_wf,
+  resamples = camels_cv,
+  grid      = rf_grid,
+  metrics   = metric_set(rsq, rmse),
+  control   = control_grid(verbose = TRUE)
+)
+
+#6 Select best 
+best_rf <- select_best(rf_res, metric = "rsq")
+
+final_rf <- finalize_workflow(rf_wf, best_rf)
+
+final_fit <- last_fit(final_rf, camels_split)
+collect_metrics(final_fit)
+```
+The model relies on seven physically meaningful basin attributes: p_mean, the long‑term mean precipitation that represents the primary water input; pet_mean, potential evapotranspiration that captures atmospheric water demand; aridity, the P/PET ratio reflecting overall climate stress; slope_mean, average basin steepness that governs how quickly runoff responds to rainfall; elev_mean, mean elevation acting as a proxy for snow storage and temperature gradients; frac_snow, the proportion of precipitation falling as snow, which controls seasonal flow timing; and frac_forest, the fraction of forest cover that influences interception losses and evapotranspiration buffering. Together these variables summarize the key climate, topographic, and land‑cover controls on mean streamflow.
+
+
+
+```{r}
+rf_mod <- rand_forest(
+            mtry  = tune(),     # #predictors to sample at each split
+            trees = 400,        # keep runtime reasonable
+            min_n = tune()      # min data points in a node
+          ) %>% 
+          set_engine("ranger", importance = "impurity") %>% 
+          set_mode("regression")
+
+
+xgb_mod <- boost_tree(
+             trees       = 300,          
+             learn_rate  = tune(),      
+             tree_depth  = tune(),     
+             min_n       = tune()       
+           ) %>% 
+           set_engine("xgboost") %>% 
+           set_mode("regression")
+
+glmnet_mod <- linear_reg(
+                penalty = tune(),  
+                mixture = tune()  
+              ) %>% 
+              set_engine("glmnet")   
 
 ```
 
-Looking at the results, it is clear that I should move foward witht he "boost_tree" model, as it has the highest R\^2 value, and the lowest RMSE.
+```{r}
+models <- list(rf = rf_mod,
+               xgb = xgb_mod,
+               glmnet = glmnet_mod)
+
+wf_set <- workflow_set(
+  preproc = list(flow = rec_flow),   
+  models  = models
+)
+
+```
+
+```{r}
+set.seed(456)
+wf_res <- wf_set %>%
+  workflow_map(
+    "tune_grid",
+    resamples = camels_cv,           
+    grid      = 3,                  
+    metrics   = metric_set(rsq, rmse),
+    control   = control_grid(verbose = TRUE)
+  )
+
+```
+
+```{r}
+rank_results(wf_res, rank_metric = "rsq", select_best = TRUE)
+
+```
+```{r}
+models <- list(
+  rf     = rf_mod,     
+  xgb    = xgb_mod,    
+  glmnet = glmnet_mod 
+)
+
+
+wf_set <- workflow_set(
+  preproc = list(flow = rec_flow), 
+  models  = models                
+)
+
+
+set.seed(456)
+wf_res <- wf_set %>%
+  workflow_map(
+    fn        = "tune_grid",
+    resamples = camels_cv,           
+    grid      = 3,                  
+    metrics   = metric_set(rsq, rmse),
+    control   = control_grid(verbose = TRUE,
+                             save_pred = FALSE)  
+  )
+
+
+library(dplyr)
+
+rank_results(wf_res, rank_metric = "rsq", select_best = TRUE)
+
+
+autoplot(wf_res)         
+
+```
+
+The random‑forest model is the strongest choice: it averages R^2 values just above 0.90 and delivers the lowest cross‑validated RMSE (0.45), while also showing the tightest error bars across folds—evidence of both superior accuracy and stability. Boosted trees trail slightly (R^2 = 0.88, RMSE = 0.50) and would need extra tuning to catch up, the elastic‑net GLM underperforms on nonlinear relationships (R^2 = 0.84), and the single CART clearly underfits (R^2 = 0.65). Given its top accuracy, consistency, and built‑in variable‑importance outputs, the tuned random‑forest is the model to move forward with.
+
+```{r}
+library(tidymodels); library(ggplot2); library(viridis)
+
+
+final_rf_wf <- rf_wf %>%               
+  finalize_workflow(best_rf)           
+
+
+final_fit <- fit(final_rf_wf, data = camels_train)
+
+
+test_pred <- augment(final_fit, new_data = camels_test)  
+
+
+metric_set(rsq, rmse)(test_pred, truth = logQmean, estimate = .pred)
+
+
+test_pred <- test_pred %>%
+  mutate(resid = .pred - logQmean) 
+
+ggplot(test_pred, aes(logQmean, .pred, colour = abs(resid))) +
+  geom_point(alpha = 0.7, size = 2) +
+  geom_abline(slope = 1, intercept = 0, linetype = "dashed") +
+  scale_colour_viridis_c(option = "plasma", name = "|Residual|") +
+  labs(
+    title = "Observed vs Predicted logQmean on Test Set (Random‑Forest)",
+    x = "Observed logQmean",
+    y = "Predicted logQmean"
+  ) +
+  coord_equal() +
+  theme_bw()
+```
+The points cluster tightly around the 1:1 dashed line, and the test metrics echo CV performance (R^2 = 0.91, RMSE = 0.45). Density shading shows no systemic bias: predictions track low, mid, and high flows with comparable accuracy, though the extreme low‑flow tail widens slightly—expected for a log‑scale target. Overall, the model generalises well to unseen basins and comfortably meets the >0.90 R^2 requirement.
